Apr 11, 2004

 * Fixed ambiguity in PlTermvDomainError constructor showing up with g++
   3.3.

Jan 21, 2003

 * One more const to avoid confusing the compiler.  Thanks to Alan Baljeu
   and Fabien Todescato.

Jan 12, 2003

 * Patches by Alan Baljeu, adding many const declarations to the interface.

VERSION 1.0.4
=============

 * ADDED: Destructor to PlEngine class, calling PL_cleanup().  Requires
   SWI-Prolog 3.4.1 or later.

VERSION 1.0.3
=============
  
 * FIXED: untyped 'operator =' declarations reported by gcc version 2.95.2.

VERSION 1.0.2
=============

 * FIXED: PlException to pass exceptions other then domain and type errors
   correctly.  Thanks to Use Lesta.

VERSION 1.0.1
=============

 * ADDED: conversion between PlTerm and void*


VERSION 1.0.0
=============